--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     Företaget startade 2002 och biodlingen drivs efter ekologiska principer vilket innebär att vi inte
                     använder oss
                     av några onaturliga bekämpningsmedel eller konstgjorda tillsatser.
-                    Vi har växt till att bli en av Kungälvs främsta ekologiska biodlingar.
+                    Vi har växt till att bli en av Kungälvs främsta ekologiska biodlingar!
                 </p>
                 <p>
                     I nuläget har vi ca 60 samhällen i våra bigårdar och vi har planer på att vidarutveckla
