--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,8 @@
                 <h1>Vill du komma i kontakt med oss?</h1>
                 <hr>
 
-                <p>Fyll i kontaktformuläret nedan så
+                <p>Maila oss på susanne@nolhaga.com.
+                    Fyll i kontaktformuläret nedan så
                     återkommer vi till dig så snart vi kan.
                 </p>
             </div>
