--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     första honungen för året.
                 </p>
                 <p>
-                    Vi har även smaksatta sorter. Se nedan och hitta din favorit!
+                    Vi har även smaksatta sorter. Nedan och hitta din favorit!
                 </p>
             </div>
         </div>
