--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <nav class="navbar">
-        <div class="nav-brand-wrap"><a class="nav-brand" href="index.html">Nolhaga Bigård</a></div>
+        <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/Logotype-Nolhaga-Bigård.jpg" alt="Logo"></a></div>
         <a class="link" href="index.html">Produkter</a>
         <a class="link" href="blog.html">Bisafari</a>
         <a class="link" href="about.html">Om oss</a>
