--- a/index.html
+++ b/index.html
@@ -4,20 +4,16 @@
     <meta charset="UTF-8">
     <title>Nolhaga Bigård</title>
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Satisfy');
-    </style>
-    <link rel="about" href="about.html">
+    <style>@import url('https://fonts.googleapis.com/css?family=Satisfy');</style>
     <script src="https://use.fontawesome.com/3aa540950e.js"></script>
 </head>
 <body>
 <header>
     <nav class="navbar">
-        <div class="nav-brand-wrap"><a href="index.html"><img class="logo"
-                                                              src="./assets/images/Logotype-Nolhaga-Bigård.jpg"
-                                                              alt="Logo"></a></div>
+        <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/Logotype-Nolhaga-Bigård.jpg" alt="Logo"></a></div>
         <a class="link" href="index.html">Produkter</a>
         <a class="link" href="beesafari.html">Bisafari</a>
+        <a class="link" href="leasing.html">Leasing</a>
         <a class="link" href="about.html">Om oss</a>
         <a class="link" href="contact.html">Kontakt</a>
     </nav>
@@ -32,6 +28,7 @@
                     <a class="button secondary" href="beesafari.html">Bisafari</a>
                     <button class="button cta">Produkter</button>
                 </div>
+                <i class="fa fa-angle-double-down" aria-hidden="true"></i>
             </div>
         </div>
     </div>
