--- a/leasing.html
+++ b/leasing.html
@@ -3,8 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <title>Nolhaga Bigård</title>
+    <link rel="stylesheet" href="css/style.css">
+    <style>@import url('https://fonts.googleapis.com/css?family=Satisfy');</style>
+    <script src="https://use.fontawesome.com/3aa540950e.js"></script>
 </head>
 <body>
+<header>
+    <nav class="navbar">
+        <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/Logotype-Nolhaga-Bigård.jpg" alt="Logo"></a></div>
+        <a class="link" href="index.html">Produkter</a>
+        <a class="link" href="beesafari.html">Bisafari</a>
+        <a class="link" href="leasing.html">Leasing</a>
+        <a class="link" href="about.html">Om oss</a>
+        <a class="link" href="contact.html">Kontakt</a>
+    </nav>
+</header>
 
+<main>
+    <div class="hero-blog">
+        <div class="color-overlay-blog">
+            <div class="hero-blog-content-container">
+                <h1>Bisafari</h1>
+            </div>
+        </div>
+    </div>
+
+    <section id="blog">
+        <div class="container-blog-text">
+            <div id=blogpost>
+                <div class="blog-text">
+                    <h1>Leasa er egen bikupa</h1>
+                    <p>
+                        Vi leasar ut bikupor till företag. Företagskuporna bidrar till hållbar utveckling genom att öka
+                        pollineringen i ert närområde och främjar därmed närproduktionen av livsmedel. <br>
+                        Vi åtar oss all skötsel av bikuporna, skördar honung och tappar på burk i storlek som vi kommer överens om.
+                        <br>Vill ni ha eran egen logga på etiketterna eller andra önskemål så kommer vi överens om detta.
+
+                    </p>
+                    <p>
+                        Honungen som kuporna genererar tillfaller företaget eller enligt annan överenskommelse.
+                        Er honung särbehandlas genom hela processen, vilket gör den producerad i ert närområde.
+                        <br>Bisafari med upp till 10 personer ingår i leasingen och även en föreläsning om intresse finns.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
+
+<footer>
+    <div class="footer-info">
+        <p>Susanne Forsman <br> Nolhaga 1, 442 90 Kungälv</p>
+        <p>Mobil: 0707-142589 <br>Mail: susanne@nolhaga.com</p>
+        <div class="social-media">
+            <a href="https://www.facebook.com/nolhagabigard/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/nolhagabigard/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        </div>
+        <div class="creator">Sidan skapad av: <a href="https://www.linkedin.com/in/lena-last/">Lena Last</a></div>
+    </div>
+</footer>
 </body>
 </html>
