--- a/about.html
+++ b/about.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <title>Nolhaga Bigård</title>
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Satisfy');
-    </style>
-    <link rel="index" href="index.html">
+    <style>@import url('https://fonts.googleapis.com/css?family=Satisfy');</style>
     <script src="https://use.fontawesome.com/3aa540950e.js"></script>
 </head>
 <body>
@@ -16,6 +13,7 @@
         <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/Logotype-Nolhaga-Bigård.jpg" alt="Logo"></a></div>
         <a class="link" href="index.html">Produkter</a>
         <a class="link" href="beesafari.html">Bisafari</a>
+        <a class="link" href="leasing.html">Leasing</a>
         <a class="link" href="about.html">Om oss</a>
         <a class="link" href="contact.html">Kontakt</a>
     </nav>
