--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <title>Nolhaga Bigård</title>
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Satisfy');
-    </style>
+    <style>@import url('https://fonts.googleapis.com/css?family=Satisfy');</style>
     <script src="https://use.fontawesome.com/3aa540950e.js"></script>
 </head>
 <body>
@@ -15,6 +13,7 @@
         <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/Logotype-Nolhaga-Bigård.jpg" alt="Logo"></a></div>
         <a class="link" href="index.html">Produkter</a>
         <a class="link" href="beesafari.html">Bisafari</a>
+        <a class="link" href="leasing.html">Leasing</a>
         <a class="link" href="about.html">Om oss</a>
         <a class="link" href="contact.html">Kontakt</a>
     </nav>
@@ -32,10 +31,10 @@
     <section id="contact">
         <div class="container-contact-text">
             <div class="contact-text">
-                <h1>Vill du komma i kontakt med oss?</h1>
+                <h1>Vill du komma i kontakt med?</h1>
                 <hr>
                 <p>Om du har frågor eller behöver information - tveka inte att kontakta oss!
-                    <br>Du kan kontakta oss via:
+                    <br>Du kan nå oss via:
                 </p>
             </div>
 
