--- a/beesafari.html
+++ b/beesafari.html
@@ -10,7 +10,9 @@
 <body>
 <header>
     <nav class="navbar">
-        <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/Logotype-Nolhaga-Bigård.jpg" alt="Logo"></a></div>
+        <div class="nav-brand-wrap"><a href="index.html"><img class="logo"
+                                                              src="./assets/images/Logotype-Nolhaga-Bigård.jpg"
+                                                              alt="Logo"></a></div>
         <a class="link" href="index.html">Produkter</a>
         <a class="link" href="beesafari.html">Bisafari</a>
         <a class="link" href="leasing.html">Leasing</a>
@@ -33,16 +35,34 @@
             <div id=blogpost>
                 <div class="blog-text">
                     <h1>Välkommen på bisafari!</h1>
-                    <p>Under våran bisafari kommer vi bina nära och kan med egna ögon ta del av det fantastiska livet i kupan.
-                        Vi drar på oss overallen som ni får låna av oss men ta med stövlar eller kängor. Vi går ut till bikupan och tittar in i biets underbara värld.
+                    <p>
+                        Under våran bisafari kommer vi bina nära och kan med egna ögon ta del av det fantastiska livet i
+                        kupan.
+                        Vi drar på oss overallen som ni får låna av oss men ta med stövlar eller kängor. <br>
+                        Vi går ut till
+                        bikupan och tittar in i biets underbara värld.
                         Här får du se hur bina lever och arbetar.
-                        Vi visar också bearbetningen av honung samt hur gången är från bikupan till honungsburken.
-                        Vi avslutar med fika och honungsprovning.</p>
+                        Ni får se också bearbetningen av honung samt hur gången är från bikupan till honungsburken.
+                        Vi avslutar med fika och honungsprovning.
+                    </p>
                     <p>
                         Vi har snälla bin. Men är du allergisk mot bi-stick vill vi inte rekommendera detta till dej.
                         Bisafarin tar ca 2 timmar
-                        Pris 300:-/vuxen, barn 150:-/barn och familj 800:-
-                        Datum Återkommer</p>
+                        Pris 300:-/vuxen, barn 150:-/barn och familj 800:-.
+                    </p>
+                    <h1>Här kommer datum för bisafari</h1>
+                    <li> 6/6</li>
+                    <li>18/6</li>
+                    <li>12/7</li>
+                    <li>17/7</li>
+                    <li>20/7</li>
+                    <li>22/7</li>
+                    <li>27/7</li>
+                    <p>
+                        Kl 14:00 alla dagar.
+                        Det går även att boka andra datum om ni minst är 4 personer. <br>
+                        Boka på: susanne@nolhaga.com eller telefon 0707142589
+                    </p>
                 </div>
             </div>
         </div>
