--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                     <a class="button secondary" href="beesafari.html">Bisafari</a>
                     <button class="button cta">Produkter</button>
                 </div>
-                <i class="fa fa-angle-double-down" aria-hidden="true"></i>
             </div>
         </div>
     </div>
@@ -38,11 +37,19 @@
             <div class="intro-text">
                 <h1>Våra produkter</h1>
                 <hr>
-                <p>Vi erbjuder olika sorters honung beroende på vad bina drar in för något.
-
-                </p>
                 <p>
+                    Vi erbjuder olika sorters honung beroende på vad bina drar in för något.
                     Vi har även smaksatta sorter. Se nedan och hitta din favorit!
+                </p>
+                <h2>Återförsäljare</h2>
+                <p>
+                    Surdegskungen Kungälv,
+                    Citygross Kungälv,
+                    ICA Maxi Kungälv,
+                    Hälsö fisk Kungälv,
+                    Åsas bageri Kareby,
+                    Hoffrekullens gårdsbutik Romelanda,
+                    ICA Maxi Torslanda
                 </p>
             </div>
         </div>
