--- a/leasing.html
+++ b/leasing.html
@@ -23,7 +23,7 @@
     <div class="hero-blog">
         <div class="color-overlay-blog">
             <div class="hero-blog-content-container">
-                <h1>Bisafari</h1>
+                <h1>Leasing</h1>
             </div>
         </div>
     </div>
