--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <nav class="navbar">
-        <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/Logotype-Nolhaga-Bigård.jpg" alt="Logo"></a></div>
+        <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/logotransp.png" alt="Logo"></a></div>
         <a class="link" href="index.html">Produkter</a>
         <a class="link" href="beesafari.html">Bisafari</a>
         <a class="link" href="leasing.html">Leasing</a>
