--- a/beesafari.html
+++ b/beesafari.html
@@ -10,9 +10,7 @@
 <body>
 <header>
     <nav class="navbar">
-        <div class="nav-brand-wrap"><a href="index.html"><img class="logo"
-                                                              src="./assets/images/Logotype-Nolhaga-Bigård.jpg"
-                                                              alt="Logo"></a></div>
+        <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/logotransp.png" alt="Logo"></a></div>
         <a class="link" href="index.html">Produkter</a>
         <a class="link" href="beesafari.html">Bisafari</a>
         <a class="link" href="leasing.html">Leasing</a>
@@ -50,7 +48,7 @@
                         Bisafarin tar ca 2 timmar
                         Pris 300:-/vuxen, barn 150:-/barn och familj 800:-.
                     </p>
-                    <h1>Här kommer datum för bisafari</h1>
+                    <h1>Datum</h1>
                     <li> 6/6</li>
                     <li>18/6</li>
                     <li>12/7</li>
