--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <nav class="navbar">
-        <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/Logotype-Nolhaga-Bigård.jpg" alt="Logo"></a></div>
+        <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/logotransp.png" alt="Logo"></a></div>
         <a class="link" href="index.html">Produkter</a>
         <a class="link" href="beesafari.html">Bisafari</a>
         <a class="link" href="leasing.html">Leasing</a>
@@ -31,7 +31,7 @@
     <section id="contact">
         <div class="container-contact-text">
             <div class="contact-text">
-                <h1>Vill du komma i kontakt med?</h1>
+                <h1>Vill du komma i kontakt?</h1>
                 <hr>
                 <p>Om du har frågor eller behöver information - tveka inte att kontakta oss!
                     <br>Du kan nå oss via:
