--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <nav class="navbar">
-        <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/Logotype-Nolhaga-Bigård.jpg" alt="Logo"></a></div>
+        <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/logotransp.png" alt="Logo"></a></div>
         <a class="link" href="index.html">Produkter</a>
         <a class="link" href="beesafari.html">Bisafari</a>
         <a class="link" href="leasing.html">Leasing</a>
@@ -121,14 +121,14 @@
                     </p>
                 </div>
                 <div class="honey">
-                    <img src="assets/images/Med%20Lime.jpg" alt="lime" class="honey-images">
+                    <img src="assets/images/Med Lime.png" alt="lime" class="honey-images">
                     <p class="product-text">
                         Limehonung har en frisk smak och passar bra i te, på rostad smörgås och likväl som i
                         bakverk även i matlagning.
                     </p>
                 </div>
                 <div class="honey">
-                    <img src="assets/images/Med%20Propolis.jpg" alt="propolis" class="honey-images">
+                    <img src="assets/images/Med Propolis.png" alt="propolis" class="honey-images">
                     <p class="product-text">
                         Propolishonung med propolisextrakt, extra bra i förkylningstider.
                     </p>
