--- a/leasing.html
+++ b/leasing.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <nav class="navbar">
-        <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/Logotype-Nolhaga-Bigård.jpg" alt="Logo"></a></div>
+        <div class="nav-brand-wrap"><a href="index.html"><img class="logo" src="./assets/images/logotransp.png" alt="Logo"></a></div>
         <a class="link" href="index.html">Produkter</a>
         <a class="link" href="beesafari.html">Bisafari</a>
         <a class="link" href="leasing.html">Leasing</a>
@@ -20,9 +20,9 @@
 </header>
 
 <main>
-    <div class="hero-blog">
-        <div class="color-overlay-blog">
-            <div class="hero-blog-content-container">
+    <div class="hero-leasing">
+        <div class="color-overlay-leasing">
+            <div class="hero-leasing-content-container">
                 <h1>Leasing</h1>
             </div>
         </div>
