--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <a href="https://www.facebook.com/nolhagabigard/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/nolhagabigard/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
     </div>
-    <div class="creator">Sidan skapad av: <a href="">Lena Last</a></div>
+    <div class="creator">Sidan skapad av: <a href="https://www.linkedin.com/in/lena-last/">Lena Last</a></div>
 </footer>
 
 <script src="js/jquery-3.1.1.min.js"></script>
