added jquery for a animation

--- a/index.html
+++ b/index.html
@@ -165,5 +165,7 @@
     <div class="creator">Sidan skapad av: <a href="https://www.linkedin.com/in/lena-last/">Lena Last</a></div>
 </footer>
 
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/scroll.js"></script>
 </body>
 </html>
