Clean up and smaller adjustments for deployment

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 </p>
                 <h2>Återförsäljare</h2>
                 <p>
-                    Surdegskungen Kungälv,
-                    Citygross Kungälv,
-                    ICA Maxi Kungälv,
-                    Hälsö fisk Kungälv,
-                    Åsas bageri Kareby,
-                    Hoffrekullens gårdsbutik Romelanda,
-                    ICA Maxi Torslanda
+                    <span>Surdegskungen Kungälv</span>
+                    <span>Citygross Kungälv</span>
+                    <span>ICA Maxi Kungälv</span>
+                    <span>Hälsö fisk Kungälv</span>
+                    <span>Åsas bageri Kareby</span>
+                    <span>Hoffrekullens handelsträdgård</span>
+                    <span>ICA Maxi Torslanda</span>
                 </p>
             </div>
         </div>
@@ -162,7 +162,7 @@
         <a href="https://www.facebook.com/nolhagabigard/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/nolhagabigard/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
     </div>
-    <div class="creator">Sidan skapad av: <a href="https://www.linkedin.com/in/lena-last/">Lena Last</a></div>
+    <div class="creator"><i class="fa fa-copyright" aria-hidden="true"></i> <a href="https://www.linkedin.com/in/lena-last/">Lena Last</a></div>
 </footer>
 
 <script src="js/jquery-3.1.1.min.js"></script>
