--- a/leasing.html
+++ b/leasing.html
@@ -60,7 +60,7 @@
         <a href="https://www.facebook.com/nolhagabigard/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/nolhagabigard/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
     </div>
-    <div class="creator">Sidan skapad av: <a href="https://www.linkedin.com/in/lena-last/">Lena Last</a></div>
+    <div class="creator"><i class="fa fa-copyright" aria-hidden="true"></i> <a href="https://www.linkedin.com/in/lena-last/">Lena Last</a></div>
 </footer>
 
 </body>
