--- a/beesafari.html
+++ b/beesafari.html
@@ -61,6 +61,7 @@
                         Det går även att boka andra datum om ni minst är 4 personer. <br>
                         Boka på: susanne@nolhaga.com eller telefon 0707142589
                     </p>
+                <img class="img-bee" src="assets/images/bee-on-flower.jpg" alt="bee-on-flower">
                 </div>
             </div>
         </div>
@@ -76,7 +77,7 @@
         <a href="https://www.facebook.com/nolhagabigard/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/nolhagabigard/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
     </div>
-    <div class="creator">Sidan skapad av: <a href="https://www.linkedin.com/in/lena-last/">Lena Last</a></div>
+    <div class="creator"><i class="fa fa-copyright" aria-hidden="true"></i> <a href="https://www.linkedin.com/in/lena-last/">Lena Last</a></div>
 </footer>
 
 </body>
