--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
 </header>
 
 <main>
-    <div class="hero-kontact">
-        <div class="color-overlay-kontact">
-            <div class="hero-kontact-content-container">
+    <div class="hero-contact">
+        <div class="color-overlay-contact">
+            <div class="hero-contact-content-container">
                 <h1>Kontakta oss</h1>
             </div>
         </div>
