More adjustments for the responitivity

--- a/beesafari.html
+++ b/beesafari.html
@@ -40,7 +40,7 @@
                         Vi går ut till
                         bikupan och tittar in i biets underbara värld.
                         Här får du se hur bina lever och arbetar.
-                        Ni får se också bearbetningen av honung samt hur gången är från bikupan till honungsburken.
+                        Ni får också se bearbetningen av honung samt hur gången är från bikupan till honungsburken.
                         Vi avslutar med fika och honungsprovning.
                     </p>
                     <p>
@@ -57,9 +57,10 @@
                     <li>22/7</li>
                     <li>27/7</li>
                     <p>
-                        Kl 14:00 alla dagar.
-                        Det går även att boka andra datum om ni minst är 4 personer. <br>
-                        Boka på: susanne@nolhaga.com eller telefon 0707142589
+                        Kl 14:00 alla dagar. <br>
+                        Boka på: susanne@nolhaga.com eller telefon 0707142589. <br>
+                        Det går även att boka andra datum om ni minst är 4 personer.
+
                     </p>
                 <img class="img-bee" src="assets/images/bee-on-flower.jpg" alt="bee-on-flower">
                 </div>
