--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2 class="section-title">Naturell honung</h2>
             <div class="natural-flavor-container">
                 <div class="honey">
-                    <img src="assets/images/Nyslungadhonung.jpg" alt="nyslungadhonug" class="honey-images-big">
+                    <div class="img-wrapper"><img src="assets/images/Nyslungadhonung.jpg" alt="nyslungadhonug" class="honey-images-big"></div>
                     <p class="product-text">Sommarhonung hos oss kommer främst från hallon, fruktträd och de växter som
                         finns i den
                         närliggande skogen. Den här honungen är gyllene i färgen som kan variera beroende på
@@ -68,7 +68,7 @@
                     </p>
                 </div>
                 <div class="honey">
-                    <img src="assets/images/Lindhonung.jpg" alt="lindhonung" class="honey-images-big">
+                    <div class="img-wrapper"><img src="assets/images/Lindhonung.jpg" alt="lindhonung" class="honey-images-big"></div>
                     <p class="product-text">Lindhonung kommer, precis som det låter, från lindar. Det är en ljus och
                         smakrik honung med inslag av
                         mynta.
@@ -76,7 +76,7 @@
                     </p>
                 </div>
                 <div class="honey">
-                    <img src="assets/images/Ljunghonung.jpg" alt="ljunghonung" class="honey-images-big">
+                    <div class="img-wrapper"><img src="assets/images/Ljunghonung.jpg" alt="ljunghonung" class="honey-images-big"></div>
                     <p class="product-text">Ljunghonung kan vara lika bra mot bakterier som den berömda manukahonungen.
                     </p>
                 </div>
@@ -84,14 +84,14 @@
             <h2 class="section-title">Smaksatt honung</h2>
             <div class="flavored-container">
                 <div class="honey">
-                    <img src="assets/images/Med Citron.jpg" alt="citron" class="honey-images">
+                    <div class="img-wrapper"><img src="assets/images/Med Citron.jpg" alt="citron" class="honey-images"></div>
                     <p class="product-text">Citronhonung är en uppfriskande smaksatt honung.
                         Den är god i te, på rostad smörgås och likväl som i bakverk även i matlagning. Tex. fisk och
                         marinader.
                     </p>
                 </div>
                 <div class="honey">
-                    <img src="assets/images/Med Ingefara.jpg" alt="ingefära" class="honey-images">
+                    <div class="img-wrapper"><img src="assets/images/Med Ingefara.jpg" alt="ingefära" class="honey-images"></div>
                     <p class="product-text">
                         Ingefärshonung med en kraftig smak av ingefära.
                         Perfekt att ta vid förkylning, huvudvärk eller orolig mage.
@@ -99,13 +99,13 @@
                     </p>
                 </div>
                 <div class="honey">
-                    <img src="assets/images/Med Eukalyptus.jpg" alt="eukalyptus" class="honey-images">
+                    <div class="img-wrapper"><img src="assets/images/Med Eukalyptus.jpg" alt="eukalyptus" class="honey-images"></div>
                     <p class="product-text">
                         Eukalyptushonung är naturligt uppfriskande och slemlösande.
                     </p>
                 </div>
                 <div class="honey">
-                    <img src="assets/images/Med Pepparmynta.jpg" alt="pepparmynta" class="honey-images">
+                    <div class="img-wrapper"><img src="assets/images/Med Pepparmynta.jpg" alt="pepparmynta" class="honey-images"></div>
                     <p class="product-text">
                         Pepparmyntshonung är även den bra att ha vid förkylning.
                         Beroende på vilken smak du föredrar kan du välja vilken sort du vill ha hemma för att lindra
@@ -113,7 +113,7 @@
                     </p>
                 </div>
                 <div class="honey">
-                    <img src="assets/images/Med Anis.jpg" alt="anis" class="honey-images">
+                    <div class="img-wrapper"><img src="assets/images/Med Anis.jpg" alt="anis" class="honey-images"></div>
                     <p class="product-text">
                         Anishonung är den perfekta sorten för dig som älskar lakrits.
                         Den har honungens sötma och en lakritssmak vilket gör att den passar både till en god kopp te
@@ -121,14 +121,14 @@
                     </p>
                 </div>
                 <div class="honey">
-                    <img src="assets/images/Med Lime.png" alt="lime" class="honey-images">
+                    <div class="img-wrapper"><img src="assets/images/Med Lime.png" alt="lime" class="honey-images"></div>
                     <p class="product-text">
                         Limehonung har en frisk smak och passar bra i te, på rostad smörgås och likväl som i
                         bakverk även i matlagning.
                     </p>
                 </div>
                 <div class="honey">
-                    <img src="assets/images/Med Propolis.png" alt="propolis" class="honey-images">
+                    <div class="img-wrapper"><img src="assets/images/Med Propolis.png" alt="propolis" class="honey-images"></div>
                     <p class="product-text">
                         Propolishonung med propolisextrakt, extra bra i förkylningstider.
                     </p>
@@ -159,7 +159,7 @@
         <p>Mobil: 0707-142589 <br>Mail: susanne@nolhaga.com</p>
     </div>
     <div class="social-media">
-        <a href="https://www.facebook.com/nolhagabigard/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        <a href="https://www.facebook.com/Nolhaga-big%C3%A5rd-1943994712479369/?fref=ts"><i class="fa fa-facebook" aria-hidden="true"></i></a>
         <a href="https://www.instagram.com/nolhagabigard/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
     </div>
     <div class="creator"><i class="fa fa-copyright" aria-hidden="true"></i> <a href="https://www.linkedin.com/in/lena-last/">Lena Last</a></div>
