--- a/leasing.html
+++ b/leasing.html
@@ -37,7 +37,7 @@
                         Vi leasar ut bikupor till företag. Företagskuporna bidrar till hållbar utveckling genom att öka
                         pollineringen i ert närområde och främjar därmed närproduktionen av livsmedel. <br>
                         Vi åtar oss all skötsel av bikuporna, skördar honung och tappar på burk i storlek som vi kommer överens om.
-                        <br>Vill ni ha eran egen logga på etiketterna eller andra önskemål så kommer vi överens om detta.
+                        <br>Vill ni ha er egen logga på etiketterna eller andra önskemål så kommer vi överens om detta.
 
                     </p>
                     <p>
